fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,7 @@ body {
   height: 100%;
   z-index: -1;
   opacity: 0.5;
+  overflow: hidden;
 }
 .bg-video__content {
   position: absolute;
