--- a/saas/components/_bg-video.scss
+++ b/saas/components/_bg-video.scss
@@ -6,12 +6,14 @@
     height: 100%;
     z-index: -1;
     opacity: 0.5;
+    overflow: hidden;
 
 
     &__content{
         position: absolute;
         width: 100%;
         height: 100%;
+
         // top: 50%;
         // left: 50%;
         // transform: translate(-50%, -50%);
